# rust-briefly

./: Cargo.toml
migrations/: 20260630095211_user_links_tables.sql
src/: error.rs  lib.rs  main.rs
src/db/: mod.rs  pool.rs  shortner.rs  user.rs
src/handlers/: auth.rs  mod.rs  shortner.rs
src/middleware/: auth.rs
src/models/: mod.rs  shortner.rs
src/routes/: auth.rs  shortner.rs
src/utils/: auth.rs  mod.rs
