[package]
name = "briefly"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
config = "0.15.25"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tower-http = { version = "0.7.0", features = ["trace"] }
md5 = "0.8.0"
base62 = "2.2.4"
anyhow = "1.0.103"
shuttle-runtime = "0.57.0"
shuttle-axum = "0.57.0"
shuttle-shared-db = { version = "0.57.0", features = ["postgres"] }
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "macros", "migrate", "chrono", "uuid", "tls-rustls"] }
    
[dev-dependencies]
reqwest = "0.13.4"